--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.13"
 dependencies = [
     "matplotlib>=3.10.1",
     "numpy>=2.2.4",
+    "pytest>=8.3.5",
     "sympy>=1.13.3",
 ]
 
