--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "matplotlib>=3.10.1",
     "mypy>=1.15.0",
     "numpy>=2.2.4",
+    "pandas>=2.2.3",
+    "pandas-stubs>=2.2.3.250308",
     "pytest>=8.3.5",
     "sympy>=1.13.3",
 ]
