--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 authors = [{ name = "haislich", email = "josedlv936@gmail.com" }]
 requires-python = ">=3.13"
 dependencies = [
+    "ipykernel>=6.29.5",
     "matplotlib>=3.10.1",
     "mypy>=1.15.0",
     "numpy>=2.2.4",
