--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,13 @@ authors = [{ name = "haislich", email = "josedlv936@gmail.com" }]
 requires-python = ">=3.13"
 dependencies = [
     "ipykernel>=6.29.5",
+    "ipympl>=0.9.7",
     "matplotlib>=3.10.1",
     "mypy>=1.15.0",
     "numpy>=2.2.4",
     "pandas>=2.2.3",
     "pandas-stubs>=2.2.3.250308",
+    "pyqt6>=6.9.0",
     "pytest>=8.3.5",
     "sympy>=1.13.3",
 ]
