--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,10 @@ build-backend = "hatchling.build"
 [[tool.mypy.overrides]]
 module = "sympy.*"
 ignore_missing_imports = true
+
+[dependency-groups]
+dev = [
+    "nbqa>=1.9.1",
+    "pylint>=3.3.6",
+    "ruff>=0.11.6",
+]
