--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ requires-python = ">=3.13"
 dependencies = [
     "ipykernel>=6.29.5",
     "ipympl>=0.9.7",
+    "loguru>=0.7.3",
     "matplotlib>=3.10.1",
+    "mpmath>=1.3.0",
     "mypy>=1.15.0",
     "numpy>=2.2.4",
     "pandas>=2.2.3",
